Fixed gradient-based sampling-based bugs.

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 <!-- Gradient&#45;Based -->
 <g id="node6" class="node">
 <title>Gradient&#45;Based</title>
-<g id="a_node6"><a xlink:href="./html/gradient_based_mbrl.html" xlink:title="Gradient&#45;Based">
+<g id="a_node6"><a xlink:href="./html/gradient_based.html" xlink:title="Gradient&#45;Based">
 <ellipse fill="none" stroke="#000000" cx="1001.6442" cy="-366" rx="65.7887" ry="18"/>
 <text text-anchor="middle" x="1001.6442" y="-362.3" font-family="Times,serif" font-size="14.00" fill="#000000">Gradient&#45;Based</text>
 </a>
@@ -133,7 +133,7 @@
 <!-- Sampling&#45;Based -->
 <g id="node7" class="node">
 <title>Sampling&#45;Based</title>
-<g id="a_node7"><a xlink:href="./html/sampling_based_mbrl.html" xlink:title="Sampling&#45;Based">
+<g id="a_node7"><a xlink:href="./html/sampling_based.html" xlink:title="Sampling&#45;Based">
 <ellipse fill="none" stroke="#000000" cx="1211.6442" cy="-366" rx="69.5877" ry="18"/>
 <text text-anchor="middle" x="1211.6442" y="-362.3" font-family="Times,serif" font-size="14.00" fill="#000000">Sampling&#45;Based</text>
 </a>
