--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 <!-- Policy Optimization&#45;&gt;Value&#45;Based -->
 <g id="edge2" class="edge">
 <title>Policy Optimization&#45;&gt;Value&#45;Based</title>
-<path fill="none" stroke="#000000" d="M886.092,-609.2253C860.6006,-581.8509 814.6442,-532.5 814.6442,-532.5 814.6442,-532.5 795.2576,-502.2797 780.3898,-479.1035"/>
-<polygon fill="#000000" stroke="#000000" points="783.3083,-477.1707 774.9627,-470.6436 777.4164,-480.9504 783.3083,-477.1707"/>
-<text text-anchor="middle" x="805.1442" y="-536.3" font-family="Times,serif" font-size="14.00" fill="#000000">has</text>
+<path fill="none" stroke="#000000" d="M877.5353,-609.7696C860.0903,-596.9271 837.11,-578.1833 820.6442,-558 801.1132,-534.0596 785.0127,-502.4299 774.9631,-480.1646"/>
+<polygon fill="#000000" stroke="#000000" points="778.1396,-478.6932 770.9076,-470.9505 771.7327,-481.5132 778.1396,-478.6932"/>
+<text text-anchor="middle" x="830.1442" y="-536.3" font-family="Times,serif" font-size="14.00" fill="#000000">has</text>
 </g>
 <!-- Policy&#45;Based -->
 <g id="node4" class="node">
@@ -62,9 +62,9 @@
 <!-- Policy Optimization&#45;&gt;Policy&#45;Based -->
 <g id="edge3" class="edge">
 <title>Policy Optimization&#45;&gt;Policy&#45;Based</title>
-<path fill="none" stroke="#000000" d="M924.3936,-609.3564C953.2651,-585.935 1000.6442,-547.5 1000.6442,-547.5 1000.6442,-547.5 1000.6442,-509.1152 1000.6442,-481.2731"/>
-<polygon fill="#000000" stroke="#000000" points="1004.1443,-481.2205 1000.6442,-471.2206 997.1443,-481.2206 1004.1443,-481.2205"/>
-<text text-anchor="middle" x="1010.1442" y="-536.3" font-family="Times,serif" font-size="14.00" fill="#000000">has</text>
+<path fill="none" stroke="#000000" d="M922.0604,-609.5028C935.6968,-596.3918 953.5835,-577.4337 965.6442,-558 979.2229,-536.1201 978.5584,-528.4486 986.6442,-504 989.102,-496.5685 991.4753,-488.4309 993.548,-480.8815"/>
+<polygon fill="#000000" stroke="#000000" points="996.9686,-481.6377 996.1676,-471.0732 990.2057,-479.8314 996.9686,-481.6377"/>
+<text text-anchor="middle" x="991.1442" y="-536.3" font-family="Times,serif" font-size="14.00" fill="#000000">has</text>
 </g>
 <!-- Actor&#45;Critic -->
 <g id="node5" class="node">
@@ -156,8 +156,8 @@
 <!-- Actor&#45;Critic&#45;&gt;Policy&#45;Based -->
 <g id="edge10" class="edge">
 <title>Actor&#45;Critic&#45;&gt;Policy&#45;Based</title>
-<path fill="none" stroke="#000000" d="M922.0058,-522.8116C936.7705,-509.7042 957.286,-491.4914 973.6604,-476.955"/>
-<polygon fill="#000000" stroke="#000000" points="976.1681,-479.409 981.3228,-470.1527 971.5208,-474.1742 976.1681,-479.409"/>
+<path fill="none" stroke="#000000" d="M917.4443,-522.671C926.5669,-512.4097 938.7591,-499.421 950.6442,-489 955.9398,-484.3567 961.8189,-479.7205 967.6312,-475.3948"/>
+<polygon fill="#000000" stroke="#000000" points="969.9786,-478.0162 976.0231,-469.3147 965.8716,-472.3476 969.9786,-478.0162"/>
 <text text-anchor="middle" x="968.6442" y="-492.8" font-family="Times,serif" font-size="14.00" fill="#000000">blends</text>
 </g>
 <!-- PILCO -->
@@ -356,8 +356,8 @@
 <!-- REINFORCE&#45;&gt;TRPO -->
 <g id="edge22" class="edge">
 <title>REINFORCE&#45;&gt;TRPO</title>
-<path fill="none" stroke="#000000" d="M995.9057,-173.9735C989.2644,-161.6801 980.359,-145.1956 972.9197,-131.4249"/>
-<polygon fill="#000000" stroke="#000000" points="975.8819,-129.5443 968.0494,-122.4097 969.7231,-132.8715 975.8819,-129.5443"/>
+<path fill="none" stroke="#000000" d="M991.5526,-174.2362C987.423,-168.5893 983.0946,-162.197 979.6442,-156 975.5173,-148.5882 971.7318,-140.1985 968.5456,-132.3953"/>
+<polygon fill="#000000" stroke="#000000" points="971.7509,-130.9816 964.8497,-122.9427 965.2315,-133.5307 971.7509,-130.9816"/>
 <text text-anchor="middle" x="996.6442" y="-144.8" font-family="Times,serif" font-size="14.00" fill="#000000">derive</text>
 </g>
 <!-- PPO -->
@@ -372,9 +372,9 @@
 <!-- REINFORCE&#45;&gt;PPO -->
 <g id="edge23" class="edge">
 <title>REINFORCE&#45;&gt;PPO</title>
-<path fill="none" stroke="#000000" d="M1010.6363,-173.9602C1017.1272,-150.5044 1027.6442,-112.5 1027.6442,-112.5 1027.6442,-112.5 1017.7894,-73.6968 1010.7096,-45.8201"/>
-<polygon fill="#000000" stroke="#000000" points="1014.0123,-44.6055 1008.1584,-35.7747 1007.2277,-46.3286 1014.0123,-44.6055"/>
-<text text-anchor="middle" x="1044.6442" y="-101.3" font-family="Times,serif" font-size="14.00" fill="#000000">derive</text>
+<path fill="none" stroke="#000000" d="M1010.4959,-173.8153C1011.7875,-168.1513 1013.0014,-161.8551 1013.6442,-156 1017.8093,-118.0568 1012.9506,-74.0466 1008.6659,-46.1209"/>
+<polygon fill="#000000" stroke="#000000" points="1012.0648,-45.2147 1007.0124,-35.9022 1005.1547,-46.3329 1012.0648,-45.2147"/>
+<text text-anchor="middle" x="1032.6442" y="-101.3" font-family="Times,serif" font-size="14.00" fill="#000000">derive</text>
 </g>
 <!-- TRPO&#45;&gt;PPO -->
 <g id="edge24" class="edge">
@@ -475,9 +475,9 @@
 <!-- Temporal Difference&#45;&gt;SARSA -->
 <g id="edge25" class="edge">
 <title>Temporal Difference&#45;&gt;SARSA</title>
-<path fill="none" stroke="#000000" d="M760.2586,-260.7794C759.6774,-233.3188 758.6442,-184.5 758.6442,-184.5 758.6442,-184.5 751.8138,-155.9202 746.3437,-133.0322"/>
-<polygon fill="#000000" stroke="#000000" points="749.6843,-131.9523 743.9556,-123.0398 742.876,-133.5795 749.6843,-131.9523"/>
-<text text-anchor="middle" x="749.1442" y="-188.3" font-family="Times,serif" font-size="14.00" fill="#000000">has</text>
+<path fill="none" stroke="#000000" d="M757.0552,-260.9057C754.4096,-247.0253 750.8939,-227.3638 748.6442,-210 745.301,-184.1968 742.8948,-154.6592 741.4163,-133.499"/>
+<polygon fill="#000000" stroke="#000000" points="744.891,-133.0039 740.7276,-123.2614 737.9068,-133.4737 744.891,-133.0039"/>
+<text text-anchor="middle" x="758.1442" y="-188.3" font-family="Times,serif" font-size="14.00" fill="#000000">has</text>
 </g>
 <!-- Temporal Difference&#45;&gt;Q&#45;Learning -->
 <g id="edge26" class="edge">
